# MIA_1S2026_P2_202202123

./: .gitignore  ARQUITECTURA_P2.md  AWS_DEPLOY_P2.md  CMakeLists.txt  ESTADO_RUTA_100.md  MANUAL_TECNICO_P2.md  MANUAL_USUARIO_P2.md  P2_CHECKLIST.md  README..md  README.md  VALIDACION_LINUX_P2.md  archivosPrueba.txt  demo_p2.smia  index.html  main.cpp  package-lock.json  package.json  prueba_auxiliar_compat_p2.smia  vite.config.js
Analyzer/: Analyzer.cpp  Analyzer.h
DiskManagement/: DiskManagement.cpp  DiskManagement.h
FileOperations/: FileOperations.cpp  FileOperations.h
FileSystem/: FileSystem.cpp  FileSystem.h
HttpServer/: HttpServer.cpp  HttpServer.h
Reports/: Reports.cpp  Reports.h
Structs/: Structs.h
UserSession/: UserSession.cpp  UserSession.h
Utilities/: Utilities.cpp  Utilities.h
deploy/: ec2_backend_setup.sh  frontend_build_prod.sh  mia-p2-202202123-key.pem
src/: App.css  App.jsx
